# vantage-rewrite-views

./: .gitignore  PAPER.md  README.md  arxiv_metadata.txt  eagle3_app.py  modal_app.py  proto_app.py  pyproject.toml  requirements.txt  vantage_modal_app.py  vantage_pytorch_app.py  vantage_runtime_app.py  vantage_runtime_debian_app.py
asts/: __init__.py  analysis.py  ast_policy.py  blazedit_decoder.py  code_proposer_decoder.py  code_proposers.py  corpus.py  decoder.py  diff_hunk_generation.py  eagle.py  eagle2_decoder.py  eagle3_decoder.py  eagle_decoder.py  eagle_train.py  humaneval.py  lookahead_decoder.py  model_bench.py  mtp_heads.py  pld_reranker.py  pvp_chain.py  pvp_decoder.py  pvp_kv_utils.py  rejection.py  residual_mtp.py  retrieval_draft.py  selective_lm_head.py  task_router.py  tree_eagle_decoder.py  treesitter_bench.py  vantage_policy.py  vantage_residual_decoder.py  vantage_residual_router.py  vantage_router.py
docs/: artifact_release.md  hf_dataset_card_template.md  vantage_claim_ledger.md  vantage_real_edit_benchmark_protocol.md  vantage_rewrite_extraction.md
paper/: README.md  vantage.tex
scripts/: analyze_alpha_suffix.py  analyze_anchor_pld_overlap.py  analyze_batched_pld_latency.py  analyze_code_proposers.py  analyze_compliance_gate.py  analyze_drift_sweep.py  analyze_edit_compliance.py  analyze_edit_workload.py  analyze_latency.py  analyze_mv_expected_acceptance.py  analyze_mv_grid.py  analyze_oracle_headroom.py  analyze_oracle_routing.py  analyze_paper_results.py  analyze_pld_candidate_oracle.py  analyze_pld_opportunity.py  (+157 more)
tests/: test_eagle.py  (+39 more)
(+21 files in other folders)
